cmake_minimum_required(VERSION 3.16.3)

project(
   Volvo_MRR2_InfineonTricore_Windows8_LATEST.out
   VERSION 0.1
)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

add_definitions(
   -g
   -std=c++2a
   -Wall
   -Werror
   -Wextra
   -pedantic
   -Wuninitialized
)


add_executable(
   Volvo_MRR2_InfineonTricore_Windows8_LATEST.out
   source/SmbLnk2_CfgGen/CfgAdc.cpp
   source/SmbLnk2_CfgGen/CfgBswM.cpp
   source/SmbLnk2_CfgGen/CfgCanIf.cpp
   source/SmbLnk2_CfgGen/CfgCanTp.cpp
   source/SmbLnk2_CfgGen/CfgCan.cpp
   source/SmbLnk2_CfgGen/CfgComM.cpp
   source/SmbLnk2_CfgGen/CfgCom.cpp
   source/SmbLnk2_CfgGen/CfgCryIf.cpp
   source/SmbLnk2_CfgGen/CfgCry.cpp
   source/SmbLnk2_CfgGen/CfgCsm.cpp
   source/SmbLnk2_CfgGen/CfgDcm.cpp
   source/SmbLnk2_CfgGen/CfgDem.cpp
   source/SmbLnk2_CfgGen/CfgDet.cpp
   source/SmbLnk2_CfgGen/CfgDio.cpp
   source/SmbLnk2_CfgGen/CfgEa.cpp
   source/SmbLnk2_CfgGen/CfgEcuM.cpp
   source/SmbLnk2_CfgGen/CfgEep.cpp
   source/SmbLnk2_CfgGen/CfgEthIf.cpp
   source/SmbLnk2_CfgGen/CfgEth.cpp
   source/SmbLnk2_CfgGen/CfgFee.cpp
   source/SmbLnk2_CfgGen/CfgFiM.cpp
   source/SmbLnk2_CfgGen/CfgFls.cpp
   source/SmbLnk2_CfgGen/CfgFrIf.cpp
   source/SmbLnk2_CfgGen/CfgFr.cpp
   source/SmbLnk2_CfgGen/CfgGpt.cpp
   source/SmbLnk2_CfgGen/CfgIcu.cpp
   source/SmbLnk2_CfgGen/CfgLinIf.cpp
   source/SmbLnk2_CfgGen/CfgLinTp.cpp
   source/SmbLnk2_CfgGen/CfgLin.cpp
   source/SmbLnk2_CfgGen/CfgMcu.cpp
   source/SmbLnk2_CfgGen/CfgMemIf.cpp
   source/SmbLnk2_CfgGen/CfgNm.cpp
   source/SmbLnk2_CfgGen/CfgNvM.cpp
   source/SmbLnk2_CfgGen/CfgOcu.cpp
   source/SmbLnk2_CfgGen/CfgOs.cpp
   source/SmbLnk2_CfgGen/CfgPduR.cpp
   source/SmbLnk2_CfgGen/CfgPort.cpp
   source/SmbLnk2_CfgGen/CfgPwm.cpp
   source/SmbLnk2_CfgGen/CfgSchM.cpp
   source/SmbLnk2_CfgGen/CfgSecOC.cpp
   source/SmbLnk2_CfgGen/CfgSokFm.cpp
   source/SmbLnk2_CfgGen/CfgSpi.cpp
   source/SmbLnk2_CfgGen/CfgStbM.cpp
   source/SmbLnk2_CfgGen/CfgStartUp.cpp
   source/SmbLnk2_CfgGen/CfgVkms.cpp
   source/SmbLnk2_CfgGen/CfgWdgIf.cpp
   source/SmbLnk2_CfgGen/CfgWdgM.cpp
   source/SmbLnk2_CfgGen/CfgWdg.cpp
   source/SmbLnk2_CanIf/CanIf.cpp
   source/SmbLnk2_CanTp/CanTp.cpp
   source/SmbLnk2_CryIf/CryIf.cpp
   source/SmbLnk2_Ea/Ea.cpp
   source/SmbLnk2_EthIf/EthIf.cpp
   source/SmbLnk2_Fee/Fee.cpp
   source/SmbLnk2_FrIf/FrIf.cpp
   source/SmbLnk2_LinIf/LinIf.cpp
   source/SmbLnk2_LinTp/LinTp.cpp
   source/SmbLnk2_MemIf/MemIf.cpp
   source/SmbLnk2_WdgIf/WdgIf.cpp
   source/SmbLnk2_Adc/Adc.cpp
   source/SmbLnk2_Can/Can.cpp
   source/SmbLnk2_Cry/Cry.cpp
   source/SmbLnk2_Dio/Dio.cpp
   source/SmbLnk2_Eep/Eep.cpp
   source/SmbLnk2_Eth/Eth.cpp
   source/SmbLnk2_Fls/Fls.cpp
   source/SmbLnk2_Fr/Fr.cpp
   source/SmbLnk2_Gpt/Gpt.cpp
   source/SmbLnk2_Icu/Icu.cpp
   source/SmbLnk2_Lin/Lin.cpp
   source/SmbLnk2_Mcu/Mcu.cpp
   source/SmbLnk2_Ocu/Ocu.cpp
   source/SmbLnk2_Port/Port.cpp
   source/SmbLnk2_Pwm/Pwm.cpp
   source/SmbLnk2_Spi/Spi.cpp
   source/SmbLnk2_Wdg/Wdg.cpp
   source/SmbLnk2_BswM/BswM.cpp
   source/SmbLnk2_Com/Com.cpp
   source/SmbLnk2_ComM/ComM.cpp
   source/SmbLnk2_Csm/Csm.cpp
   source/SmbLnk2_Dcm/Dcm.cpp
   source/SmbLnk2_Dem/Dem.cpp
   source/SmbLnk2_Det/Det.cpp
   source/SmbLnk2_EcuM/EcuM.cpp
   source/SmbLnk2_FiM/FiM.cpp
   source/SmbLnk2_Nm/Nm.cpp
   source/SmbLnk2_NvM/NvM.cpp
   source/SmbLnk2_Os/Os.cpp
   source/SmbLnk2_PduR/PduR.cpp
   source/SmbLnk2_SchM/SchM.cpp
   source/SmbLnk2_SecOC/SecOC.cpp
   source/SmbLnk2_SokFm/SokFm.cpp
   source/SmbLnk2_StartUp/StartUp.cpp
   source/SmbLnk2_StbM/StbM.cpp
   source/SmbLnk2_Vkms/Vkms.cpp
   source/SmbLnk2_WdgM/WdgM.cpp
   source/SmbLnk2_Rte/Rte.cpp
   source/SmbLnk2_SwcServiceEcuM/SwcServiceEcuM.cpp
   source/SmbLnk2_SwcServiceOs/SwcServiceOs.cpp
)

target_include_directories(
   Volvo_MRR2_InfineonTricore_Windows8_LATEST.out PUBLIC
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_common"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_CompilerAbstractionGNU"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_CfgGen"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_CanIf"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_CanTp"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_CryIf"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Ea"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_EthIf"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Fee"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_FrIf"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_LinIf"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_LinTp"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_MemIf"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_WdgIf"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Adc"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Can"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Cry"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Dio"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Eep"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Eth"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Fls"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Fr"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Gpt"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Icu"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Lin"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Mcu"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Ocu"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Port"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Pwm"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Spi"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Wdg"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_BswM"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Com"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_ComM"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Csm"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Dcm"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Dem"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Det"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_EcuM"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_FiM"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Nm"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_NvM"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Os"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_PduR"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_SchM"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_SecOC"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_SokFm"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_StartUp"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_StbM"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Vkms"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_WdgM"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_Rte"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_SwcServiceEcuM"
   "${PROJECT_SOURCE_DIR}/source/SmbLnk2_SwcServiceOs"
)

